[metadata]
name = django_eth_fields
version = 0.0.1
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = Extension for Django REST framework error display
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-none/django-eth-fields
project_urls =
    Bug Tracker = https://github.com/null-none/django-eth-fields/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
